--- a/app/src/main/res/layout/activity_forgot_pasword_11330.xml
+++ b/app/src/main/res/layout/activity_forgot_pasword_11330.xml
@@ -46,12 +46,14 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_in" />
 
     <EditText
-        android:id="@+id/edt_reset_code"
+        android:id="@+id/edt_txt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
+        android:inputType="textEmailAddress"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reset_code" />
@@ -65,7 +67,7 @@
         android:background="@drawable/button_red"
         android:text="@string/sent_request"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/edt_reset_code"
+        app:layout_constraintTop_toBottomOf="@+id/edt_txt_email"
         android:layout_marginTop="32dp"
         android:onClick="postSentRequest"
         app:layout_constraintEnd_toEndOf="parent"
