--- a/app/src/main/res/layout/activity_reset_password_11330.xml
+++ b/app/src/main/res/layout/activity_reset_password_11330.xml
@@ -55,6 +55,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
+        android:inputType="number"
         android:layout_marginRight="24dp"
         android:hint="@string/enter_your_reset_code" />
 
@@ -80,6 +81,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
+        android:inputType="textPassword"
         android:hint="@string/enter_your_password" />
 
     <TextView
@@ -103,6 +105,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
+        android:inputType="textPassword"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="62dp"
         android:hint="@string/enter_your_password" />
