--- a/app/src/main/res/layout/activity_welcome_back_11330.xml
+++ b/app/src/main/res/layout/activity_welcome_back_11330.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/welcome_back" />
 
     <TextView
-        android:id="@+id/reset_code"
+        android:id="@+id/txt_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -46,19 +46,20 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_n" />
 
     <EditText
-        android:id="@+id/edt_reset_code"
+        android:id="@+id/edt_txt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
         android:hint="@string/enter_your_email"
+        android:inputType="textEmailAddress"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reset_code" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email" />
 
     <TextView
-        android:id="@+id/new_password"
+        android:id="@+id/txt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -66,20 +67,21 @@
         android:text="@string/password"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_reset_code" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_txt_email" />
 
     <EditText
-        android:id="@+id/edt_new_password"
+        android:id="@+id/edt_txt_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
         android:hint="@string/enter_your_password"
+        android:inputType="textPassword"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
     <TextView
         android:id="@+id/forgot_password"
@@ -92,7 +94,7 @@
         android:textSize="18sp"
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="clickForgot"
-        app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_txt_password" />
 
     <Button
         android:id="@+id/btn_login"
